# lore

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
docs/: claude-integration.md  plugin-dev.md
examples/: dogfood_domaintome.py  validate_prd_queries.py
examples/booking-api/: .gitignore  README.md  demo.tape
examples/booking-api/app/: api.py  models.py  rules.py  services.py
examples/booking-api/scripts/: expire_pending.py  seed_graph.sql
examples/stress/: build_large_graph.py  stress_suite.py
plugin/.claude-plugin/: plugin.json
plugin/commands/lore/: audit.md  init.md  recent.md
plugin/skills/lore-usage/: SKILL.md
plugins/domaintome/: .mcp.json
plugins/domaintome/.claude-plugin/: plugin.json
plugins/domaintome/agents/: dt-explorer.md
plugins/domaintome/commands/: audit.md  bootstrap.md  impact.md  init.md  probe.md  recent.md  reconcile.md  show.md  stats.md  sync.md  verify.md
plugins/domaintome/hooks/: hooks.json
plugins/lore/: .mcp.json
plugins/lore/.claude-plugin/: plugin.json
plugins/lore/commands/: audit.md  bootstrap.md  impact.md  init.md  probe.md  recent.md  show.md  sync.md
plugins/lore/hooks/: hooks.json
src/domaintome/: lifecycle.py  sync.py
src/lore/: lifecycle.py  sync.py
tests/: conftest.py  test_audit_log.py  test_batch.py  test_cli.py  test_edges.py  test_export.py  test_install_claude.py  test_lifecycle.py  test_mcp.py  test_nodes.py  test_plugin_structure.py  test_queries.py  test_schema.py  test_sync.py  test_v01_features.py
(+34 files in other folders)
